[workspace]
resolver = "2"
members = [
    "pgpvis-core",
    "wasm-bindgen-cli",
]

[profile.release]
opt-level = "s"
strip = "symbols"
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[patch.crates-io.sequoia-openpgp]
git = "https://github.com/shniubobo/sequoia.git"
rev = "e906c1c7c491b6435aade3bb356a9685ad43f8c4"
