[workspace]
resolver = "2"
members = [
    "pgpvis-core",
    "wasm-bindgen-cli",
]

[profile.release]
opt-level = "s"
strip = "symbols"
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[patch.crates-io.sequoia-openpgp]
git = "https://github.com/shniubobo/sequoia.git"
rev = "aebe70d78b5c645aa26c21463197903418fbfb71"
