[package]
name = "pgpvis-core"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95" # Dependency of `sequoia-openpgp`
derive_more = { version = "1.0.0", features = ["display"] }
paste = "1.0.15"
sequoia-openpgp = { version = "1.22.0", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_repr = "0.1.19"
thiserror = "2.0.8"
tsify-next = { version = "0.5.4", features = ["js"], default-features = false }
wasm-bindgen = "0.2.99"

[dev-dependencies]
insta = { version = "1.42.0", features = ["yaml"] }
